// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput should render 1`] = `
<div>
  <div
    className="search"
  >
    <FontAwesome
      className="searchIcon"
      name="search"
    />
    <input
      className="searchInput"
      defaultValue="Test"
      onChange={[Function]}
      placeholder="search"
      type="text"
    />
  </div>
</div>
`;

exports[`SearchInput should render and space search 1`] = `
<div
  className="searchSpacing"
>
  <div
    className="search"
  >
    <FontAwesome
      className="searchIcon"
      name="search"
    />
    <input
      className="searchInput"
      defaultValue="Test"
      onChange={[Function]}
      placeholder="search"
      type="text"
    />
  </div>
</div>
`;
